[package]
name = "up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.23"
log = "0.4"
colored = "2"
indicatif = "0.17.2"
chrono = "0.4.23"
ctrlc = "3.2.5"
clap = "4.1.4"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
